update delete myRecipe, delete recipeTest, edit recipeTest , change model gemini,.... fix bug,.....